@@ -38,6 +38,9 @@ Commands
 ``adamantine-cloth-wear``
     Prevents adamantine clothing from wearing out while being worn
     (:bug:`6481`).
+``animaltrap-reuse``
+    Makes built animal traps unload caught vermin into stockpiled animal traps
+    so that they can be automatically re-baited and reused.
 ``craft-age-wear``
     Fixes crafted items not wearing out over time (:bug:`6003`). With this
     tweak, items made from cloth and leather will gain a level of wear every 20
